add support for prefix&suffix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -424,16 +424,17 @@ set (CMAKE_EXE_LINKER_FLAGS_RELEASE  "${CMAKE_EXE_LINKER_FLAGS_RELEASE} ${LINKER
 set (CMAKE_Fortran_FLAGS_DEBUG       "${CMAKE_Fortran_FLAGS_DEBUG} ${CMAKE_Fortran_FLAGS_RELEASE}")
 set (CMAKE_Fortran_FLAGS_DEBUG       "${CMAKE_Fortran_FLAGS_DEBUG} ${DEBUG_FLAGS}"        )
 
-# Finalizing
-set (CMAKE_Fortran_FLAGS_RELEASE   "${CMAKE_Fortran_FLAGS_RELEASE}    ${DAMASK_INCLUDE_FLAGS}")
-set (CMAKE_Fortran_FLAGS_DEBUG     "${CMAKE_Fortran_FLAGS_DEBUG}      ${DAMASK_INCLUDE_FLAGS}")
+# Finalizing, adding PREFIX and SUFFIX to compiler chain
+set (CMAKE_Fortran_FLAGS_RELEASE   "${DAMASK_PREFIX} ${CMAKE_Fortran_FLAGS_RELEASE} ${DAMASK_INCLUDE_FLAGS} ${DAMASK_SUFFIX}")
+set (CMAKE_Fortran_FLAGS_DEBUG     "${DAMASK_PREFIX} ${CMAKE_Fortran_FLAGS_DEBUG}   ${DAMASK_INCLUDE_FLAGS} ${DAMASK_SUFFIX}")
 set (CMAKE_LINKER                  "${PETSC_LINKER}")
+
 if ("${CMAKE_BUILD_TYPE}" STREQUAL "RELEASE")
     set (CMAKE_Fortran_LINK_EXECUTABLE
-      "${CMAKE_LINKER} ${CMAKE_EXE_LINKER_FLAGS_RELEASE} <OBJECTS> -o <TARGET> <LINK_LIBRARIES> ${PETSC_EXTERNAL_LIB}")
+      "${DAMASK_PREFIX} ${CMAKE_LINKER} ${CMAKE_EXE_LINKER_FLAGS_RELEASE} <OBJECTS> -o <TARGET> <LINK_LIBRARIES> ${PETSC_EXTERNAL_LIB}  ${DAMASK_SUFFIX}")
 else("${CMAKE_BUILD_TYPE}" STREQUAL "RELEASE")
     set (CMAKE_Fortran_LINK_EXECUTABLE
-      "${CMAKE_LINKER} ${CMAKE_EXE_LINKER_FLAGS_DEBUG} <OBJECTS> -o <TARGET> <LINK_LIBRARIES> ${PETSC_EXTERNAL_LIB}")
+      "${DAMASK_PREFIX} ${CMAKE_LINKER} ${CMAKE_EXE_LINKER_FLAGS_DEBUG} <OBJECTS> -o <TARGET> <LINK_LIBRARIES> ${PETSC_EXTERNAL_LIB}  ${DAMASK_SUFFIX}")
 endif("${CMAKE_BUILD_TYPE}" STREQUAL "RELEASE")
 
 message("***COMPILE FLAGS:\n${CMAKE_Fortran_FLAGS_RELEASE}\n")
