update cmake build system

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -168,8 +168,8 @@ if (FEM)
       add_library(DAMASK_FEM_DRIVER "DAMASK_FEM_driver.f90")
       target_link_libraries(DAMASK_FEM_DRIVER DAMASK_FEM_BASE)
 
-      add_executable(DAMASK_FEM.exe "DAMASK_FEM_driver.f90")
-      target_link_libraries(DAMASK_FEM.exe DAMASK_FEM_DRIVER)
+      add_executable(DAMASK_FEM "DAMASK_FEM_driver.f90")
+      target_link_libraries(DAMASK_FEM DAMASK_FEM_DRIVER)
 endif(FEM)
 
 if (SPECTRAL)
@@ -193,6 +193,6 @@ if (SPECTRAL)
       target_link_libraries(DAMASK_EXE DAMASK_SPECTRAL_BASE)
       target_link_libraries(DAMASK_EXE DAMASK_SPECTRAL_MECH)
 
-      add_executable(DAMASKSpectral.exe "DAMASK_spectral.f90")
-      target_link_libraries(DAMASKSpectral.exe DAMASK_EXE)
+      add_executable(DAMASK_spectral "DAMASK_spectral.f90")
+      target_link_libraries(DAMASK_spectral DAMASK_EXE)
 endif(SPECTRAL)
