--- a/.gitattributes
+++ b/.gitattributes
@@ -3,8 +3,8 @@
 # always use LF, even if the files are edited on windows, they need to be compiled/used on unix
 * text eol=lf
 
+installation/mods_Abaqus/abaqus_v6_windows.env eol=crlf 
 # Denote all files that are truly binary and should not be modified.
 *.png binary
 *.jpg binary
 *.cae binary
-installation/mods_Abaqus/abaqus_v6_windows.env -crlf
